Java instructions